Homepage now shows the widget and input to copypaste

--- a/blender-coders/src/styles/widgets.sass
+++ b/blender-coders/src/styles/widgets.sass
@@ -8,14 +8,14 @@ body
 
 
 #meetings_widget-container
-	width: 200px
+	width: 180px
 	position: relative
 	padding: 0 10px
 
 	#meetings_widget-next
 		color: #444
 		border-top: thin solid #ddd
-		padding: 15px 0 20px 0
+		padding: 20px 0
 		margin: 10px 0 0 0
 		clear: both
 		display: flex
