--- a/blender-coders/src/styles/main.sass
+++ b/blender-coders/src/styles/main.sass
@@ -1,2 +1,54 @@
-body
-	color: gray
+$font-body: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif
+
+body, html
+	width: 100%
+	height: 100%
+	padding: 0
+	margin: 0
+	color: #444
+	background-color: white
+	font:
+		size: 1em
+		family: $font-body
+
+h1, h2, h3, h4, h5, h6
+	font-weight: 300
+
+#page-container
+	display: flex
+	text-align: center
+	align-items: center
+	justify-content: center
+	flex-direction: column
+	height: 100%
+	width: 100%
+	position: relative
+
+	.meeting-widget
+		text-align: center
+
+		iframe.meeting-widget__iframe
+			display: block
+			border: none
+			margin: 35px auto 30px auto
+			border-radius: 3px
+
+		.meeting-widget__embed-text
+			font-size: .8em
+			color: #888
+
+		.meeting-widget__embed-input
+			display: block
+			width: 90%
+			margin: 5px auto
+			border: thin solid #ccc
+			padding: 5px 10px
+			border-radius: 3px
+			background-color: #ddd
+			color: #555
+			font:
+				family: monospace
+				size: .8em
+
+
+
