--- a/blender-coders/src/templates/widgets/index.jade
+++ b/blender-coders/src/templates/widgets/index.jade
@@ -33,8 +33,10 @@ html
         for(i = 0; i < arr.length; i++) {
           // Guess local timezone
           var local = moment.tz.guess();
-          // Convert GMT timezone to local timezone
-          var a = moment.tz(arr[i].gmt_time, local);
+          // Generate local timezone
+          var a = moment.tz(arr[i].local_time, arr[i].city);
+          // Convert timezone to current local timezone
+          a = a.clone().tz(local);
           // Get continent to format date properly (AM/PM vs 24h)
           var continent = local.split('/')[0];
           // Define hour format to be used in all a.format() calls
