--- a/blender-coders/src/styles/widgets.sass
+++ b/blender-coders/src/styles/widgets.sass
@@ -42,10 +42,12 @@ body
 			.next-day
 				font-size: .8em
 
+		abbr
+			border-bottom: 2px dotted #444
+
 
 	#meetings_widget-upcoming
 		border-top: thin solid #ddd
-		color: #666
 		color: #888
 		font-size: .9em
 		text-align: center
@@ -66,3 +68,6 @@ body
 
 		.upcoming-item
 			padding: 6px 0 0 0
+
+		abbr
+			border-bottom: 1px dotted #888
